<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="org.csystem.android.app.geonames.search.viewmodel.listeners.MainActivityListenerViewModel"/>
        <variable name="viewModel" type="MainActivityListenerViewModel" />
        <variable name="enableSearch" type="boolean" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->viewModel.handleSettingsButtonClicked()}"
            android:text="@string/button_settings_text" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->viewModel.handleWikiSearchButtonClicked()}"
            android:enabled="@{enableSearch}"
            android:text="@string/button_wiki_search_text" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->viewModel.handlePostalCodeSearchButtonClicked()}"
            android:enabled="@{enableSearch}"
            android:text="@string/button_postal_code_search_text" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->viewModel.handleCloseButtonClicked()}"
            android:text="@string/button_close_text" />
    </LinearLayout>
</layout>